--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,14 +63,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Script\Enemy\Enemy.cs" />
+    <Compile Include="Assets\Script-Other\Enemy.cs" />
+    <Compile Include="Assets\Script-Other\Pig.cs" />
+    <Compile Include="Assets\Script-Other\PigBase.cs" />
+    <Compile Include="Assets\Script-Other\PigBase1.cs" />
+    <Compile Include="Assets\Script-Other\Player.cs" />
     <Compile Include="Assets\Script\Enemy\EnemyBasic.cs" />
-    <Compile Include="Assets\Script\Enemy\Pig.cs" />
-    <Compile Include="Assets\Script\Enemy\PigBase.cs" />
-    <Compile Include="Assets\Script\Enemy\PigBase1.cs" />
     <Compile Include="Assets\Script\HealthBar.cs" />
     <Compile Include="Assets\Script\Manager\SceneController.cs" />
-    <Compile Include="Assets\Script\Player\Player.cs" />
+    <Compile Include="Assets\Script\PickUpIteams.cs" />
     <Compile Include="Assets\Script\Player\PlayerAnimation.cs" />
     <Compile Include="Assets\Script\Player\PlayerBasic.cs" />
     <Reference Include="UnityEngine">
