--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Script-Other\PigBase1.cs" />
     <Compile Include="Assets\Script-Other\Player.cs" />
     <Compile Include="Assets\Script\Enemy\EnemyBasic.cs" />
+    <Compile Include="Assets\Script\GameUiManager.cs" />
     <Compile Include="Assets\Script\HealthBar.cs" />
     <Compile Include="Assets\Script\Manager\SceneController.cs" />
     <Compile Include="Assets\Script\PickUpIteams.cs" />
