--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Script\Enemy\EnemyBase_Script.cs" />
     <Compile Include="Assets\Script\Fov_Test.cs" />
     <Compile Include="Assets\Script-Other\PigBase1.cs" />
+    <Compile Include="Assets\Script\CameraFollow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
